--- a/NewRacingSystem/NewRacingSystem.csproj
+++ b/NewRacingSystem/NewRacingSystem.csproj
@@ -68,18 +68,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataStructures.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="MathExtensions.cs" />
+    <Compile Include="Menu.cs" />
+    <Compile Include="MiscUtils.cs" />
+    <Compile Include="NativeMemory.cs" />
     <Compile Include="PersonalitySet.cs" />
     <Compile Include="Racer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutosportRacingSystem.cs" />
     <Compile Include="SkillSet.cs" />
+    <Compile Include="UI.cs" />
+    <Compile Include="VehicleExtensions.cs" />
+    <Compile Include="XmlUtils.cs" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>COPY "$(TargetDir)$(TargetFileName)" "G:\Juegos\steamapps\common\Grand Theft Auto V\Scripts\ARS"</PostBuildEvent>
+    <PostBuildEvent>COPY "$(TargetDir)$(TargetFileName)" "D:\Games\Steam\steamapps\common\Grand Theft Auto V\Scripts\ARS"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
