--- a/NewRacingSystem/NewRacingSystem.csproj
+++ b/NewRacingSystem/NewRacingSystem.csproj
@@ -21,7 +21,10 @@
     <PackageReference Include="ScriptHookVDotNet2" Version="2.10.14">
       <IncludeAssets>compile</IncludeAssets>
     </PackageReference>
-    <Compile Include="$(ProjectDir)/../RagePresence/RagePresence.SHVDN3/Wrapper.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\RagePresence\RagePresence.SHVDN2\RagePresence.SHVDN2.csproj" />
   </ItemGroup>
 
 </Project>
